--- a/derivation.css
+++ b/derivation.css
@@ -1,11 +1,13 @@
 
-/* Column 1*/
+
 
 #pg_header{
     position: relative;
-    left: 320px;
+    left: 420px;
 }
-#strpos-1{
+
+/************** Column 1***********/
+#svg_col-1{
     position: relative;
     left: 60px;
     top: 10px;
@@ -18,7 +20,7 @@
     top: 40px;
 }
 
-#pehla{
+#col-1{
     background-color: rgb(192, 241, 241); 
     height: 400px;
    
@@ -34,32 +36,33 @@
     background:#e9828200;
     border: 1px;
 }
-/* Column 2*/
-#strpos-2{
+
+/************* Column 2***********/
+#svg_col-2{
     position: relative;
     left: 60px;
     top: 0px;
 }
 
-#duusra{
+#col-2{
     background-color: rgb(240, 241, 192); 
     height: 400px;
  }
 
 
- /* Column 3*/
+ /************* Column 3***********/
 
- #teesra{
+ #col-3{
     background-color: rgb(208, 241, 192); 
     height: 400px;
  }
-#zuu{
+#svg_col-3{
     position: relative;
     left: 0px;
     top:  0x; 
     z-index: 5;
     width: 680px;
-    height: 600px;
+    height: 300px;
 }
  #zoom{
     position: relative;
@@ -99,21 +102,57 @@
     
 }
 
+/************* Column 4***********/
 
 #col-4{
     background-color: rgb(241, 203, 192); 
-    height: 400px;
+    height: 500px;
   
  }
 
+ #p1_col-4{
+    position: relative;
+    left: 60px;
+ }
+
+ #svg_col-4{
+    position: relative;
+    left: -150px;
+    top:  300x;
+    bottom: -30px;
+    height: 300px;
+ }
+
+/************* Column 5***********/
  #col-5{
     background-color: rgb(233, 192, 241); 
-    height: 400px;
-    
+    height: 500px;
+    z-index: 10;
+ }
+ #svg_col-5{
+    position: relative;
+    left: -50px;
+    top:  0x;
+    bottom: -30px;
  }
 
+ #groupforce-2{
+    position: relative;
+    left: 220px;
+    top:  100x;
+    bottom: 140px;  
+ }
+/************* Column 6***********/
  #col-6{
     background-color: rgb(193, 192, 241); 
-    height: 400px;
+    height: 500px;
 
  }
+
+ #svg_col-6{
+   position: relative;
+   left: -50px;
+   top:  0x;
+   bottom: -30px;
+   z-index: 10;
+}
